fix: update link color in Header component for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @theme {
   --color-dark: #09090b;
   --color-regular: #a1a1aa;
+  --color-link: #d4d4d8;
   --color-secondary: #71717a;
   --color-outline: #212123;
   --color-accent: #22d3ee;
